Fix project hover bug on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -227,6 +227,13 @@ section {
   }
   @media (max-width: 900px) {
     padding: 5vh 5vw;
+    .project-cards {
+      display: inline-grid;
+      grid-template-columns: 40vw 40vw;
+      .project-card {
+        width: 100%;
+      }
+    }
   }
 }
 
